itemlist populating via fb, fixed logout button visibility issues and weird padding for mobile style

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -41,7 +41,7 @@ h3 {
     font-family: 'Poiret One', cursive;
 }
 /*Avacado Animation ID */
-#avo {
+#avo{
     padding-top:10vh;
       max-height:400px;
     animation-name: spin;
@@ -50,6 +50,7 @@ h3 {
     animation-timing-function: ease-in;
   /*Form styles*/
 }
+
 .formControl{
     width:50vw;
     margin-left:25vw;
@@ -101,6 +102,7 @@ input {
 nav ul{
     list-style: none;
     text-align:center;
+    padding:0;
 }
 nav ul a{
     text-decoration: none;
@@ -121,6 +123,9 @@ nav ul a li.logo{
      font-weight: bold;
     
 }
+.logoutNav{
+    display:none;
+}
 .navItem{
    display:inline-block;
 }
@@ -129,27 +134,39 @@ nav ul a li.logo{
 }
 table{
    padding-top:0;
+     font-family: Montserrat;
 }
 #tableHead{
     background:#f4ff81;
-    color:rgb(25,25,25);
     font-size:20px;
+}
+#tableHead td{
+  
+    color:rgb(126,106,86);
+}
+.listImage{
+    max-height: 10vh;
+    max-width: 10vw;
+    width:auto;
+    height:auto;
 }
 
 td{
-    padding:10px 8vw;
     font-weight:thin;
+    height:auto;
+    width:auto;
     color:white;
 }
 tr{
     background:rgba(255,255,255,0.4);
+    text-align:center;
 }
 tr:nth-of-type(2){
     background:rgba(0,0,0,0.1);
 }
 /* Mobile styles */
 
-@media only screen and (max-width: 989px) { 
+@media only screen and (max-width: 1075px) { 
     .formControl{
     width:80vw;
     margin-left:10vw;
@@ -176,4 +193,5 @@ nav ul a li{
     font-size:6vh;
     
 }
+
 }
